fix background image gap

--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -1,13 +1,10 @@
 @use "../../styles/_mixins" as m;
 
-.imageBackground {
+.layoutBackground {
   @include m.flex-centered;
   flex-direction: column;
-  min-height: 100%;
+  min-height: 100vh;
+  height: 100%;
   z-index: -100;
-}
-
-.nextImage {
-  z-index: -100;
-  display: fixed;
+  position: relative;
 }
